# sudoku-battle

./: .dockerignore  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  STATUS.md  docker-compose.yml  firestore.indexes.json  firestore.rules
.claude/: PLAN.md  settings.json  settings.local.json
.claude/agents/: backend.md  frontend.md  infra.md  security.md
.claude/commands/: release.md  ship.md
.claude/hooks/: post-python-edit.sh  post-ts-edit.sh  pre-commit-guard.sh  pre-push-guard.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  preview.yml
backend/: .env.example  CLAUDE.md  Dockerfile  PLAN.md  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: challenges.py  players.py  rooms.py
backend/app/core/: config.py
backend/app/models/: challenge.py  player.py  room.py
backend/app/repositories/: challenge_repo.py  player_repo.py  room_repo.py
backend/app/schemas/: challenge.py  player.py  room.py
backend/app/ws/: room_handler.py
backend/tests/: test_challenges.py  test_config.py  test_health.py  test_players.py  test_room_ws.py  test_rooms.py  test_smoke.py
docs/: GAME_SPEC.md  PREVIEW_DEPLOYMENTS.md
docs/superpowers/plans/: 2026-04-10-phase-0-1-solo-play.md  2026-04-13-phase0-backend-init.md  2026-04-15-sudoku-ui-polish.md  2026-04-19-phase2-auth-leaderboard.md  2026-04-19-phase3-multiplayer.md  2026-04-22-phase5-deploy.md
docs/superpowers/specs/: 2026-04-10-first-logic-phases-design.md  2026-04-13-phase0-backend-init-design.md  2026-04-19-phase2-auth-leaderboard-design.md  2026-04-19-phase3-multiplayer-design.md
frontend/: CLAUDE.md  PLAN.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/models/: index.ts
frontend/src/services/: api.ts  ws.ts
frontend/src/utils/: bestTimes.test.ts  bestTimes.ts  generatePuzzle.test.ts  puzzle.test.ts  puzzle.ts
frontend/src/viewmodels/: useAuth.test.ts  useAuth.ts  useGame.test.ts  useGame.ts  useLeaderboard.test.ts  useLeaderboard.ts  useRoom.test.ts  useRoom.ts  useTheme.ts  (+1 more)
git-hooks/: pre-commit  pre-push
scripts/: release.sh  setup-hooks.sh
(+14 files in other folders)
